--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/webpack": "^4.4.6",
+    "@types/webpack-env": "^1.13.6",
     "axios": "^0.18.0",
     "element-ui": "^2.4.3",
     "js-cookie": "^2.2.0",
@@ -23,7 +25,9 @@
     "@vue/cli-service": "^3.0.0-beta.15",
     "babel-eslint": "8.0.3",
     "babel-plugin-component": "^1.1.1",
-    "eslint": "^4.15.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.22.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
@@ -36,6 +40,7 @@
     "sass-loader": "^7.0.1",
     "svg-sprite-loader": "^3.8.0",
     "typescript-eslint-parser": "^16.0.1",
+    "vue-eslint-parser": "^3.0.0",
     "vue-template-compiler": "^2.5.16"
   },
   "postcss": {
